apps/executor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: executor
  namespace: executor
spec:
  selector:
    app: executor
  ports:
    - name: http
      port: 8080
      targetPort: http
